--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,18 @@ h6 {
 }
 
 img.img-fluid {
+  height: auto;
+  max-width: 100%;
+}
+
+img#opening {
   border-radius: 50px;
 }
+
+img#resume, img#music_pic {
+  border-radius: 10px;
+}
+
 
 hr.star-light,
 hr.star-dark {
@@ -199,6 +209,14 @@ header.masthead h2 {
   }
 }
 
+ p#me {
+  font-size: 1.60rem;
+}
+
+p#music_desc {
+  font-size: 1.75rem;
+}
+
 .portfolio {
   margin-bottom: -15px;
 }
@@ -267,59 +285,6 @@ header.masthead h2 {
   .portfolio-modal .portfolio-modal-dialog h2 {
     font-size: 3rem;
   }
-}
-
-.floating-label-form-group {
-  position: relative;
-  border-bottom: 1px solid #e9ecef;
-}
-
-.floating-label-form-group input,
-.floating-label-form-group textarea {
-  font-size: 1.5em;
-  position: relative;
-  z-index: 1;
-  padding-right: 0;
-  padding-left: 0;
-  resize: none;
-  border: none;
-  border-radius: 0;
-  background: none;
-  -webkit-box-shadow: none !important;
-  box-shadow: none !important;
-}
-
-.floating-label-form-group label {
-  font-size: 0.85em;
-  line-height: 1.764705882em;
-  position: relative;
-  z-index: 0;
-  top: 2em;
-  display: block;
-  margin: 0;
-  -webkit-transition: top 0.3s ease, opacity 0.3s ease;
-  transition: top 0.3s ease, opacity 0.3s ease;
-  vertical-align: middle;
-  vertical-align: baseline;
-  opacity: 0;
-}
-
-.floating-label-form-group:not(:first-child) {
-  padding-left: 14px;
-  border-left: 1px solid #e9ecef;
-}
-
-.floating-label-form-group-with-value label {
-  top: 0;
-  opacity: 1;
-}
-
-.floating-label-form-group-with-focus label {
-  color: #18BC9C;
-}
-
-form .row:first-child .floating-label-form-group {
-  border-top: 1px solid #e9ecef;
 }
 
 .footer {
